# config.pub

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  hz.sh.md  stage_1.sh.md
.github/workflows/: release.yml
bootstrap/: BUILD.bazel  bootstrap.sh  hz.sh  stage_1.sh
